--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-changed": "^1.1.1",
     "gulp-concat": "^2.4.3",
     "gulp-filter": "^2.0.0",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-html-replace": "^1.4.4",
     "gulp-load-plugins": "^0.10.0",
     "gulp-minify-css": "^1.2.4",
